# bowtie2-mg

./: .gitignore  CMakeLists.txt  README.md  aligner.cpp  fasta_splitter.py  indexer.cpp
include/tclap/: LICENSE
